0.1 07apr2025
* initial version
0.2
* observe moon tilt for moon symbol